--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "Ritik Raj",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.4.0",
     "express": "^4.18.2",
     "mongoose": "^7.0.5"
   }
